--- a/src/main/resources/UI/search.fxml
+++ b/src/main/resources/UI/search.fxml
@@ -10,6 +10,7 @@
   <content>
     <AnchorPane fx:id="searchPane" id="heatTab" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="303.0" prefWidth="733.0" rotate="0.0">
       <children>
+      <VBox>
         <HBox prefHeight="23.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
           <children>
             <Label prefWidth="50.000099999997474" text="Search" />
@@ -21,6 +22,11 @@
             <CheckBox mnemonicParsing="false" selected="true" text="RE" wrapText="false" />
           </children>
         </HBox>
+        <HBox prefHeight="23.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+        <Button fx:id="selectProfilesButton" mnemonicParsing="false" text="Select Profiles" />
+        <Button fx:id="selectOptionsButton"  mnemonicParsing="false" text="Select Options" />
+        <Button fx:id="searchButton"  mnemonicParsing="false" text="Search" />
+        </HBox>    
         <HBox spacing="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
         <TextArea fx:id="searchTextArea" id="SearchTextArea" layoutX="10.0" layoutY="86.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500" prefWidth="1024" wrapText="true">
           <effect>
@@ -29,8 +35,8 @@
             </DropShadow>
           </effect>
         </TextArea>
-        <Button fx:id="selectProfilesButton" layoutX="141.0" layoutY="54.0" mnemonicParsing="false" text="Select Profiles" />
-        <Button fx:id="searchButton" layoutX="387.0" layoutY="54.0" mnemonicParsing="false" text="Search" />        
+        
+        </VBox>    
       </children>
     </AnchorPane>
   </content>
