--- a/src/main/resources/UI/profile.fxml
+++ b/src/main/resources/UI/profile.fxml
@@ -1,74 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.spyone.model.*?>
+<?import com.spyone.profile.*?>
+<?import com.spyone.util.*?>
 <?import java.lang.*?>
+<?import javafx.collections.*?>
+<?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.cell.*?> 
-<?import javafx.collections.*?> 
-<?import com.spyone.profile.*?> 
-<?import com.spyone.model.*?> 
-<?import com.spyone.util.*?> 
-
 
 <Tab fx:id="profileTab" text="Profiles" xmlns:fx="http://javafx.com/fxml" fx:controller="com.spyone.gui.profiles.ProfileController">
   <content>
     <GridPane alignment="CENTER" hgap="10.0" vgap="10.0">
-   
-    <padding>
-        <Insets top="10.0" right="10.0" bottom="10.0" left="10.0"/>
-    </padding>
-    <Label style="-fx-font: NORMAL 20 Tahoma;" text="Profiles"                
-        GridPane.columnIndex="0" GridPane.rowIndex="0">
-    </Label>
-    <TableView editable="true" fx:id="tableView" GridPane.columnIndex="0" GridPane.rowIndex="1" id="profiles-table">
-     <columns>
-	    <TableColumn fx:id="profileNameColumn" text="Profile Name" prefWidth="100">
-	        <cellValueFactory>
-	        	<PropertyValueFactory property="profileName" />
-	        </cellValueFactory>
-	     </TableColumn>
-	     
-	     <TableColumn fx:id="filePathColumn" text="File Path" prefWidth="100">
-	        <cellValueFactory>
-	        	<PropertyValueFactory property="filePath" />
-	        </cellValueFactory>
-	     </TableColumn>
-	     
-	     <TableColumn fx:id="hostColumn" text="Host" prefWidth="200">
-	        <cellValueFactory>
-	        	<PropertyValueFactory property="host" />
-	        </cellValueFactory>
-	     </TableColumn>
-	     
-	     <TableColumn fx:id="userColumn" text="User" prefWidth="200">
-	        <cellValueFactory>
-	        	<PropertyValueFactory property="user" />
-	        </cellValueFactory>
-	     </TableColumn>
-	     
-	     <TableColumn fx:id="passwordColumn" text="Password" prefWidth="200">
-	        <cellValueFactory>
-	        	<PropertyValueFactory property="password" />
-	        </cellValueFactory>
-	     </TableColumn>
-		</columns>
-	</TableView>
-	
-	<HBox spacing="10" alignment="bottom_right" GridPane.columnIndex="0" GridPane.rowIndex="2">
-	      <TextField fx:id="profileNameField" promptText="Profile Name"
-	           prefWidth="90"/>
-	      <TextField fx:id="filePathField" promptText="File path"
-	           prefWidth="90"/>
-	      <TextField fx:id="hostField" promptText="Host"
-	           prefWidth="150"/>
-	      <TextField fx:id="userField" promptText="User"
-	           prefWidth="150"/>
-	      <TextField fx:id="passwordField" promptText="Password"
-	           prefWidth="150"/>
-	      <Button text="Add" onAction="#addSpyOneProfile"/>
-	 </HBox>
-	</GridPane>
+      <padding>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+      </padding>
+      <Label style="-fx-font: NORMAL 20 Tahoma;" text="Profiles" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+      <TableView id="profiles-table" fx:id="tableView" editable="true" GridPane.columnIndex="0" GridPane.rowIndex="1">
+        <columns>
+          <TableColumn prefWidth="100.0" text="Profile Name" fx:id="profileNameColumn">
+            <cellValueFactory>
+              <PropertyValueFactory property="profileName" />
+            </cellValueFactory>           
+          </TableColumn>
+          <TableColumn prefWidth="100.0" text="File Path" fx:id="filePathColumn">
+            <cellValueFactory>
+              <PropertyValueFactory property="filePath" />
+            </cellValueFactory>
+          </TableColumn>
+          <TableColumn prefWidth="200.0" text="Host" fx:id="hostColumn">
+            <cellValueFactory>
+              <PropertyValueFactory property="host" />
+            </cellValueFactory>
+          </TableColumn>
+          <TableColumn prefWidth="200.0" text="User" fx:id="userColumn">
+            <cellValueFactory>
+              <PropertyValueFactory property="user" />
+            </cellValueFactory>
+          </TableColumn>
+          <TableColumn prefWidth="200.0" text="Password" fx:id="passwordColumn">
+            <cellValueFactory>
+              <PropertyValueFactory property="password" />
+            </cellValueFactory>
+          </TableColumn>
+        </columns>
+      </TableView>
+      <HBox alignment="BOTTOM_RIGHT" spacing="10.0" GridPane.columnIndex="0" GridPane.rowIndex="2">
+        <TextField fx:id="profileNameField" prefWidth="90.0" promptText="Profile Name" />
+        <TextField fx:id="filePathField" prefWidth="90.0" promptText="File path" />
+        <TextField fx:id="hostField" prefWidth="150.0" promptText="Host" />
+        <TextField fx:id="userField" prefWidth="150.0" promptText="User" />
+        <TextField fx:id="passwordField" prefWidth="150.0" promptText="Password" />
+        <Button onAction="#addSpyOneProfile" text="Add" />
+      </HBox>
+    </GridPane>
   </content>
 </Tab>
