--- a/src/main/resources/UI/stats.fxml
+++ b/src/main/resources/UI/stats.fxml
@@ -11,8 +11,8 @@
   <content>
     <AnchorPane id="heatTab" fx:id="statsPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="303.0" prefWidth="733.0" rotate="0.0">
       <children>
-        <VBox>
-          <HBox prefHeight="23.0" spacing="10.0">
+        <VBox VBox.vgrow="ALWAYS">
+          <HBox prefHeight="23.0" spacing="10.0" alignment="TOP_CENTER">
             <children>
               <Label prefWidth="50.000099999997474" text="stats" />
               <TextField fx:id="textstats" prefWidth="465.0">
@@ -23,26 +23,40 @@
               <CheckBox mnemonicParsing="false" selected="true" text="RE" wrapText="false" />
             </children>
           </HBox>
-          <HBox prefHeight="23.0" spacing="10.0">
+          <HBox prefHeight="23.0" spacing="10.0" alignment="TOP_CENTER">
             <Button fx:id="selectProfilesButton" mnemonicParsing="false" text="Select Profiles" />
             <Button fx:id="selectOptionsButton" mnemonicParsing="false" text="Select Options" />
             <Button fx:id="statsButton" mnemonicParsing="false" text="create graphs" />
           </HBox>
           <HBox spacing="10.0" />
-          <HBox spacing="10.0">
+          <HBox spacing="10.0" VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS">
             <PieChart id="PieChart" fx:id="pieChart" />
             <BarChart fx:id="barChart">
               <xAxis>
-            	<CategoryAxis side="BOTTOM" />
-          	  </xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
               <yAxis>
-            	<NumberAxis side="LEFT" />
+                <NumberAxis side="LEFT" />
               </yAxis>
-             </BarChart>
+            </BarChart>
+            <LineChart fx:id="lineChart">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </LineChart>
+            <AreaChart fx:id="areaChart">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </AreaChart>
           </HBox>
-         
         </VBox>
-        
       </children>
     </AnchorPane>
   </content>
