--- a/src/main/resources/UI/search.fxml
+++ b/src/main/resources/UI/search.fxml
@@ -6,44 +6,52 @@
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
 
-<Tab fx:id="searchTab" text="Search" xmlns:fx="http://javafx.com/fxml" fx:controller="com.spyone.gui.search.SearchController">
-  <content>
-    <AnchorPane id="heatTab" fx:id="searchPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="303.0" prefWidth="733.0" rotate="0.0">
-      <children>
-        <VBox>
-          <HBox prefHeight="23.0" spacing="10.0" alignment="TOP_CENTER">
-            <children>
-              <Label prefWidth="50.000099999997474" text="Search" />
-              <TextField fx:id="textSearch" prefWidth="465.0">
-                <effect>
-                  <DropShadow />
-                </effect>
-              </TextField>
-              <CheckBox mnemonicParsing="false" selected="true" text="RE" wrapText="false" />
-            </children>
-          </HBox>
-          <HBox spacing="10.0" />
-          <HBox prefHeight="23.0" spacing="10.0" alignment="TOP_CENTER">
-            <Button fx:id="selectProfilesButton" mnemonicParsing="false" text="Select Profiles" />
-            <Button fx:id="selectOptionsButton" mnemonicParsing="false" text="Select Options" />                      
-          </HBox>
-          <HBox spacing="10.0" />
-          <HBox prefHeight="23.0" spacing="10.0" alignment="TOP_CENTER">
-          <Button fx:id="searchButton" mnemonicParsing="false" text="Search" /> 
-          </HBox>
-          <HBox fx:id="expandLinkHBox" alignment="TOP_RIGHT">
-              <children>
-                <Hyperlink fx:id="expandLink" text="Expand" />
-              </children>
-            </HBox>
-          <HBox spacing="10.0" />
-          <TextArea id="SearchTextArea" fx:id="searchTextArea" editable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1024.0" wrapText="true" VBox.vgrow="ALWAYS">
-            <effect>
-              <DropShadow height="25.0" radius="12.0" width="25.0" />
-            </effect>
-          </TextArea>
-        </VBox>
-      </children>
-    </AnchorPane>
-  </content>
+<Tab fx:id="searchTab" text="Search" xmlns:fx="http://javafx.com/fxml"
+	fx:controller="com.spyone.gui.search.SearchController">
+	<content>
+		<AnchorPane id="heatTab" fx:id="searchPane" maxHeight="1.7976931348623157E308"
+			maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0"
+			prefHeight="303.0" prefWidth="733.0" rotate="0.0">
+			<children>
+				<VBox>
+					<HBox prefHeight="23.0" spacing="10.0" alignment="TOP_CENTER">
+						<children>
+							<Label prefWidth="50.000099999997474" text="Search" />
+							<TextField fx:id="textSearch" prefWidth="465.0">
+								<effect>
+									<DropShadow />
+								</effect>
+							</TextField>
+							<CheckBox mnemonicParsing="false" selected="true" text="RE"
+								wrapText="false" />
+						</children>
+					</HBox>
+					<HBox spacing="10.0" />
+					<HBox prefHeight="23.0" spacing="10.0" alignment="TOP_CENTER">
+						<Button fx:id="selectProfilesButton" mnemonicParsing="false"
+							text="Select Profiles" />
+						<Button fx:id="selectOptionsButton" mnemonicParsing="false"
+							text="Select Options" />
+					</HBox>
+					<HBox spacing="10.0" />
+					<HBox prefHeight="23.0" spacing="10.0" alignment="TOP_CENTER">
+						<Button fx:id="searchButton" mnemonicParsing="false" text="Search" />
+					</HBox>
+					<HBox fx:id="expandLinkHBox" alignment="TOP_RIGHT">
+						<children>
+							<Hyperlink fx:id="expandLink" text="Expand" />
+						</children>
+					</HBox>
+					<HBox spacing="10.0" />
+					<TextArea id="SearchTextArea" fx:id="searchTextArea"
+						editable="false" minHeight="-Infinity" minWidth="-Infinity"
+						prefHeight="500.0" prefWidth="1024.0" wrapText="true" VBox.vgrow="ALWAYS">
+						<effect>
+							<DropShadow height="25.0" radius="12.0" width="25.0" />
+						</effect>
+					</TextArea>
+				</VBox>
+			</children>
+		</AnchorPane>
+	</content>
 </Tab>
