--- a/src/main/resources/UI/spyone.css
+++ b/src/main/resources/UI/spyone.css
@@ -1,34 +1,34 @@
 #MainTabs {
-    -fx-padding: 36px 0 0 0;
-    -fx-background-color: radial-gradient(center 70% 5%, radius 60%, #767a7b,#2b2f32);
+    -fx-padding: 36.0px 0.0 0.0 0.0;
+    -fx-background-color: radial-gradient(center 70.0% 5.0%, radius 60.0%, #767a7b,#2b2f32);
     -fx-background-image: url("images/noise.png") , url("images/titlespyone.png");
     -fx-background-repeat: repeat, no-repeat;
-    -fx-background-position: left top, left 5px top 15px ;
+    -fx-background-position: left top, left 5.0px top 15.0px ;
 }
 #MainTabs *.tab-header-background {
     -fx-background-color: transparent;
     -fx-effect: null;
     -fx-border-image-source: url("images/tab-area4.png");
-    -fx-border-image-slice: 0 0 25 0;
-    -fx-border-image-width: 0 0 25 0;
+    -fx-border-image-slice: 0.0 0.0 25.0 0.0;
+    -fx-border-image-width: 0.0 0.0 25.0 0.0;
     -fx-border-image-repeat: stretch;
 }
 #MainTabs *.tab-header-area {
-    -fx-padding: 0 10px 0 430px;
+    -fx-padding: 0.0 10.0px 0.0 430.0px;
 }
 #MainTabs .headers-region {
     -fx-effect: null;
 }
 #MainTabs .tab {
-    -fx-padding: 0px 5px -2px 5px;
-    -fx-background-insets: 0 -20 0 0;
+    -fx-padding: 0.0px 5.0px -2.0px 5.0px;
+    -fx-background-insets: 0.0 -20.0 0.0 0.0;
     -fx-background-color: transparent;
     -fx-text-fill: #c4d8de;
     -fx-border-image-source: url("images/tab5.png");
-    -fx-border-image-slice: 20 20 20 20 fill;
-    -fx-border-image-width: 20 20 20 20;
+    -fx-border-image-slice: 20.0 20.0 20.0 20.0 fill;
+    -fx-border-image-width: 20.0 20.0 20.0 20.0;
     -fx-border-image-repeat: stretch;
-    -fx-font-size: 22px;
+    -fx-font-size: 22.0px;
 }
 #MainTabs .tab:selected {
     -fx-border-image-source: url("images/tab-selected5.png");
@@ -76,32 +76,32 @@
 /* =============== STYLE ALL SCROLL BARS ================================================= */
 .scroll-bar {
     -fx-background-color: transparent;
-    -fx-background-insets: 0;
-    -fx-padding: 5;
+    -fx-background-insets: 0.0;
+    -fx-padding: 5.0;
 }
 .scroll-bar .thumb {
     -fx-background-color: white;
-    -fx-background-insets: 0;
+    -fx-background-insets: 0.0;
     -fx-background-radius: 0.5em;
 }
 .scroll-bar .track  {
     -fx-background-color: transparent;
-    -fx-background-insets:  0;
-    -fx-border-color: rgba(255,255,255,0.5);
+    -fx-background-insets:  0.0;
+    -fx-border-color: rgba(255.0,255.0,255.0,0.5);
     -fx-border-radius: 0.5em;
 }
 .scroll-bar .increment-button {
     -fx-background-color: null;
 }
 .scroll-bar:horizontal .increment-button {
-    -fx-padding: 0.5em 0 0.5em 0;
+    -fx-padding: 0.5em 0.0 0.5em 0.0;
 }
 .scroll-bar:vertical .increment-button {
-    -fx-padding: 0 0.5em 0 0.5em;
+    -fx-padding: 0.0 0.5em 0.0 0.5em;
 }
 .scroll-bar .decrement-button, .scroll-bar .increment-arrow, .scroll-bar .decrement-arrow {
     -fx-background-color: null;
-    -fx-padding: 0;
+    -fx-padding: 0.0;
 }
 .corner {
     -fx-background-color: transparent;
@@ -109,9 +109,9 @@
 
 /* =============== LIVE TAB ================================================= */
 #LiveTable {
-    -fx-padding: 15px;
+    -fx-padding: 15.0px;
     -fx-background-color: transparent;
-    -fx-font-size: 16px;
+    -fx-font-size: 16.0px;
 }
 #liveView .choice-box {
     -fx-outer-border: #5b676b;
@@ -120,41 +120,41 @@
     -fx-opacity: 0.7;
 }
 .map-pane {
-    -fx-padding: 10px;
+    -fx-padding: 10.0px;
     -fx-border-image-source: url("images/map-background.png"), url("images/noise.png");
-    -fx-border-image-slice: 0 0 0 0 fill;
-    -fx-border-image-width: 0 0 0 0;
+    -fx-border-image-slice: 0.0 0.0 0.0 0.0 fill;
+    -fx-border-image-width: 0.0 0.0 0.0 0.0;
     -fx-border-image-repeat: stretch, repeat;
 }
 #liveView.split-pane {
     -fx-background-color: transparent;
-    -fx-background-insets: 0;
-    -fx-padding: 0;
+    -fx-background-insets: 0.0;
+    -fx-padding: 0.0;
 }
 #liveView.split-pane .split-pane-divider {
-   -fx-padding: -3 0 -3 0;
+   -fx-padding: -3.0 0.0 -3.0 0.0;
    -fx-border-color: null;
-   -fx-border-width: 0;
+   -fx-border-width: 0.0;
    -fx-background-color: transparent;
-   -fx-background-insets: 0;
+   -fx-background-insets: 0.0;
 }
 #liveView .horizontal-grabber {
-    -fx-padding: 0;
+    -fx-padding: 0.0;
     -fx-background-color: transparent;
-    -fx-background-insets: 0;
+    -fx-background-insets: 0.0;
 }
 #liveView .vertical-grabber {
-    -fx-padding: 0;
+    -fx-padding: 0.0;
     -fx-background-color: transparent;
-    -fx-background-insets: 0;
+    -fx-background-insets: 0.0;
 }
 #LiveSaleView{
     -fx-background-color: transparent;
-    -fx-background-insets: 0;
-    -fx-padding: 10;
+    -fx-background-insets: 0.0;
+    -fx-padding: 10.0;
     -fx-border-image-source: url("images/table-background.png"), url("images/noise.png");
-    -fx-border-image-slice: 0 0 1 0 fill, 0 0 0 0 fill;
-    -fx-border-image-width: 0 0 1 0, 0;
+    -fx-border-image-slice: 0.0 0.0 1.0 0.0 fill, 0.0 0.0 0.0 0.0 fill;
+    -fx-border-image-width: 0.0 0.0 1.0 0.0, 0.0;
     -fx-border-image-repeat: stretch, repeat;
 }
 #LiveSaleView Label , #LiveSaleView .table-cell { /* Center align table cells */
@@ -165,15 +165,15 @@
 /* =============== STYLE ALL TABLES ================================================= */
 .table-view {
     -fx-background-color: transparent;
-    -fx-background-insets: 0;
-    -fx-padding: 10;
+    -fx-background-insets: 0.0;
+    -fx-padding: 10.0;
 }
 .table-view .column-header-background {
     -fx-background-color: transparent;
-    -fx-border-color: transparent transparent rgba(255,255,255,0.3) transparent;
-    -fx-border-width: 1;
-    -fx-background-insets: 0;
-    -fx-padding: 0 10 0 0;
+    -fx-border-color: transparent transparent rgba(255.0,255.0,255.0,0.3) transparent;
+    -fx-border-width: 1.0;
+    -fx-background-insets: 0.0;
+    -fx-padding: 0.0 10.0 0.0 0.0;
 }
 .table-view .column-header, .table-view .filler {
     -fx-border-color: transparent;
@@ -187,13 +187,13 @@
     -fx-text-fill: white;
 }
 .table-view  .table-row-cell:filled:selected:focused, .table-row-cell:filled:selected {
-    -fx-background-color: rgba(0,0,0,0.1);
+    -fx-background-color: rgba(0.0,0.0,0.0,0.1);
 }
 /* =============== HISTORY TAB ================================================= */
 #HistoryTab {
     -fx-border-image-source: url("images/table-background.png"), url("images/noise.png");
-    -fx-border-image-slice: 0 0 1 0 fill, 0 0 0 0 fill;
-    -fx-border-image-width: 0 0 0 0, 0;
+    -fx-border-image-slice: 0.0 0.0 1.0 0.0 fill, 0.0 0.0 0.0 0.0 fill;
+    -fx-border-image-width: 0.0 0.0 0.0 0.0, 0.0;
     -fx-border-image-repeat: stretch, repeat;
 }
 #HistoryTab #regionLabel {
@@ -204,98 +204,98 @@
 }
 #HistoryTab .TimeRangeSelector .handle {
     /*-fx-border-color: blue; */
-    -fx-padding: 10;
+    -fx-padding: 10.0;
 }
 #HistoryTab .TimeRangeSelector .handle .thumb {
   /*  -fx-background-color: red;
     -fx-padding: 5; */
-  -fx-padding: 20 18 20 18; 
+  -fx-padding: 20.0 18.0 20.0 18.0; 
   -fx-background-image: url("images/slider-thumb.png");
-  -fx-background-image-insets: 0;
+  -fx-background-image-insets: 0.0;
 }
 #HistoryTab #pieChart1 .chart-content, #HistoryTab #pieChart2 .chart-content {
-    -fx-padding: 0;
+    -fx-padding: 0.0;
 }
 #HistoryTab .chart-vertical-grid-lines, #HistoryTab .chart-horizontal-grid-lines,  #HistoryTab .chart-vertical-zero-line, #HistoryTab .chart-horizontal-zero-line {
     -fx-stroke: null;
-    -fx-stroke-width: 0;
+    -fx-stroke-width: 0.0;
 }
 #HistoryTab .chart-alternative-column-fill, #HistoryTab .chart-alternative-row-fill {
     -fx-fill: null;
 }
 #HistoryTab .TimeRangeSelector .chart-plot-background {
-    -fx-background-color: rgba(255,255,255,0.1);
+    -fx-background-color: rgba(255.0,255.0,255.0,0.1);
 }
 #HistoryTab .TimeRangeSelector .chart-content {
-    -fx-padding: 8 8 30 0;
+    -fx-padding: 8.0 8.0 30.0 0.0;
 }
 #HistoryTab .TimeRangeSelector .chart-area-symbol {
     -fx-background-color: null;
-    -fx-padding: 0;
+    -fx-padding: 0.0;
 }
 #HistoryTab .TimeRangeSelector .axis-tick-mark {
     -fx-stroke: white;
 }
 
 #HistoryTab .chart-pie-label {
-    -fx-font-size: 9px;
+    -fx-font-size: 9.0px;
     -fx-text-fill: white;
 }
 #HistoryTab .text.chart-pie-label{
     -fx-fill: white;
 }
 .table-chart-cell {
-    -fx-padding: 0px;
+    -fx-padding: 0.0px;
 }
 .table-chart {
-    -fx-padding: 0px;
+    -fx-padding: 0.0px;
 }
 .table-chart .chart-content {
-    -fx-padding: 0px;
+    -fx-padding: 0.0px;
 }
 .table-chart .chart-area-symbol {
     -fx-background-color: null;
-    -fx-padding: 0;
+    -fx-padding: 0.0;
 }
 .table-chart .chart-plot-background {
     -fx-background-color: null;
 }
 .table-chart .chart-vertical-grid-lines, .table-chart .chart-horizontal-grid-lines,  .table-chart .chart-vertical-zero-line, .table-chart .chart-horizontal-zero-line {
     -fx-stroke: null;
-    -fx-stroke-width: 0;
+    -fx-stroke-width: 0.0;
 }
 .table-chart .chart-alternative-column-fill, .table-chart .chart-alternative-row-fill {
     -fx-fill: null;
 }
 .table-chart .axis {
     -fx-border-color: null;
-    -fx-tick-label-font: 1px Ariel;
+    -fx-tick-label-font: 1.0px Ariel;
 }
 .table-chart .axis .tick-mark {
-    -fx-font-size: 1px;
+    -fx-font-size: 1.0px;
 }
 .table-chart .axis:bottom {
-    -fx-padding: 0 0 -30 0;
+    -fx-padding: 0.0 0.0 -30.0 0.0;
 }
 .table-chart .axis:left {
-    -fx-padding: 0 0 0 -30;
+    -fx-padding: 0.0 0.0 0.0 -30.0;
 }
 .table-chart .chart-series-area-line {
     -fx-stroke: #418ace;
-    -fx-stroke-width: 1px;
+    -fx-stroke-width: 1.0px;
 }
 .table-chart .chart-series-area-fill {
     -fx-stroke: null;
-    -fx-fill: rgba(65,138,206,0.4);
+    -fx-fill: rgba(65.0,138.0,206.0,0.4);
 }
 /* =============== HEAT MAP TAB ================================================= */
 #searchTab .map-pane {
-    -fx-padding: 40px;
+    -fx-padding: 40.0px;
 }
 .heatmap-label {
-    -fx-font: bold 22px Verdana;
+    -fx-font: bold 22.0px Verdana;
     -fx-text-fill: white;
-    -fx-effect: dropshadow( one-pass-box , black , 5, 1 , 0 , 0 );
+    -fx-effect: dropshadow( one-pass-box , black , 5.0, 1.0 , 0.0 , 0.0 );
 }
 
 #SearchTextArea .textArea{
@@ -304,22 +304,22 @@
 
 /* =============== IMPORTED ================================================= */
 .root {
--fx-base: rgb(50, 50, 50);
--fx-background: rgb(50, 50, 50);
--fx-control-inner-background:  rgb(50, 50, 50);
+-fx-base: rgb(50.0, 50.0, 50.0);
+-fx-background: rgb(50.0, 50.0, 50.0);
+-fx-control-inner-background:  rgb(50.0, 50.0, 50.0);
 }
  
 .tab {
--fx-background-color: linear-gradient(to top, -fx-base, derive(-fx-base,30%));
+-fx-background-color: linear-gradient(to top, -fx-base, derive(-fx-base,30.0%));
 }
  
 .menu-bar {
--fx-background-color: linear-gradient(to bottom, -fx-base, derive(-fx-base,30%));
+-fx-background-color: linear-gradient(to bottom, -fx-base, derive(-fx-base,30.0%));
 }
  
 .tool-bar:horizontal {
 -fx-background-color:
-linear-gradient(to bottom, derive(-fx-base,+50%), derive(-fx-base,-40%), derive(-fx-base,-20%));
+linear-gradient(to bottom, derive(-fx-base,50.0%), derive(-fx-base,-40.0%), derive(-fx-base,-20.0%));
 }
  
 .button:hover {
@@ -328,18 +328,18 @@ linear-gradient(to bottom, derive(-fx-base,+50%), derive(-fx-base,-40%), derive(
 }
  
 .table-view {
--fx-table-cell-border-color:derive(-fx-base,+10%);
--fx-table-header-border-color:derive(-fx-base,+20%);
+-fx-table-cell-border-color:derive(-fx-base,10.0%);
+-fx-table-header-border-color:derive(-fx-base,20.0%);
 }
  
 .split-pane:horizontal > * > .split-pane-divider {
 -fx-border-color: transparent -fx-base transparent -fx-base;
--fx-background-color: transparent, derive(-fx-base,20%);
--fx-background-insets: 0, 0 1 0 1;
+-fx-background-color: transparent, derive(-fx-base,20.0%);
+-fx-background-insets: 0.0, 0.0 1.0 0.0 1.0;
 }
  
 .my-gridpane {
--fx-background-color: radial-gradient(radius 100%, derive(-fx-base,20%), derive(-fx-base,-20%));
+-fx-background-color: radial-gradient(radius 100.0%, derive(-fx-base,20.0%), derive(-fx-base,-20.0%));
 }
  
 .separator-label {
@@ -348,11 +348,11 @@ linear-gradient(to bottom, derive(-fx-base,+50%), derive(-fx-base,-40%), derive(
 
 .chart-legend {
    -fx-background-color:  transparent;
-   -fx-padding: 20px;
+   -fx-padding: 20.0px;
 }
  
 .chart-legend-item-symbol{
-   -fx-background-radius: 0;
+   -fx-background-radius: 0.0;
 }
  
 .chart-legend-item{
